--- a/new design for staging/otherad.css
+++ b/new design for staging/otherad.css
@@ -380,6 +380,7 @@ body {
 
 .news-content-div:last-child {
     border-bottom: none;
+    padding-bottom: 0px;
 }
 
 .left-box {
